--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,9 @@
     ],
     "homepage": "https://www.Leuchtfeuer.com",
     "require": {
-        "auth0/auth0-php": "^8.14.0",
+        "auth0/auth0-php": "^8.17.0",
         "lcobucci/jwt": "^5.1",
-        "symfony/http-foundation": "^6.2 || ^7.1.3",
+        "symfony/http-foundation": "^6.2 || ^v7.3.7",
         "symfony/property-access": "^6.2 || ^7.1.4",
         "symfony/property-info": "^6.3 || ^7.1",
         "symfony/serializer": "^6.4 || ^7.0",
